tests/type-errors/invalid_instruction_view_assign.arl
archetype invalid_instruction_fun_asset

variable res : nat = 0

asset my_asset {
  a : nat;
  b : string;
}

view f() : unit {
  var x = 0;
  x := 0;
  res := 2;
  return Unit
}

entry exec () {
  var x = 0;
  x := 0;
  res := 2;
}
